--- a/mywork/Gaussian_Benchmark/gaussian_benchmark.ipynb
+++ b/mywork/Gaussian_Benchmark/gaussian_benchmark.ipynb
@@ -48,7 +48,7 @@
     "\n",
     "# Simulate some unit variance Gaussian noise on this random vector\n",
     "sigma = 1\n",
-    "n = sigma*np.random.randn(dimension, 1)\n",
+    "n = sigma * np.random.randn(dimension, 1)\n",
     "image = image + n"
    ]
   },
@@ -66,31 +66,31 @@
    "outputs": [],
    "source": [
     "# Define a regularisation parameter (this should be tuned for a given problem)\n",
-    "delta = 1/2\n",
+    "delta = 1 / 2\n",
     "\n",
     "# Parameter dictionary associated with optimisation problem of resampling from the prior subject to the likelihood iso-ball\n",
     "params = utils.create_parameters_dict(\n",
-    "           y = image,                # Measurements i.e. data\n",
-    "         Phi = phi,                  # Forward model\n",
-    "     epsilon = 1e-3,                 # Radius of L2-ball of likelihood \n",
-    "       tight = True,                 # Is Phi a tight frame or not?\n",
-    "          nu = 1,                    # Bound on the squared-norm of Phi\n",
-    "         tol = 1e-10,                # Convergence tolerance of algorithm\n",
-    "    max_iter = 200,                  # Maximum number of iterations\n",
-    "     verbose = 0,                    # Verbosity level\n",
-    "           u = 0,                    # Initial vector for the dual problem\n",
-    "         pos = True,                 # Positivity flag\n",
-    "     reality = True                  # Reality flag\n",
+    "    y=image,  # Measurements i.e. data\n",
+    "    Phi=phi,  # Forward model\n",
+    "    epsilon=1e-3,  # Radius of L2-ball of likelihood\n",
+    "    tight=True,  # Is Phi a tight frame or not?\n",
+    "    nu=1,  # Bound on the squared-norm of Phi\n",
+    "    tol=1e-10,  # Convergence tolerance of algorithm\n",
+    "    max_iter=200,  # Maximum number of iterations\n",
+    "    verbose=0,  # Verbosity level\n",
+    "    u=0,  # Initial vector for the dual problem\n",
+    "    pos=True,  # Positivity flag\n",
+    "    reality=True,  # Reality flag\n",
     ")\n",
     "\n",
     "# Options dictionary associated with the overall sampling algorithm\n",
     "options = utils.create_options_dict(\n",
-    "    samplesL = 2e4,                  # Number of live samples\n",
-    "    samplesD = 3e5,                  # Number of discarded samples \n",
-    "    thinning = 1e1,                  # Thinning factor (to mitigate correlations)\n",
-    "       delta = 1e-2,                 # Discretisation stepsize\n",
-    "        burn = 1e2,                  # Number of burn in samples\n",
-    "       sigma = sigma                 # Noise standard deviation of degraded image\n",
+    "    samplesL=2e4,  # Number of live samples\n",
+    "    samplesD=3e5,  # Number of discarded samples\n",
+    "    thinning=1e1,  # Thinning factor (to mitigate correlations)\n",
+    "    delta=1e-2,  # Discretisation stepsize\n",
+    "    burn=1e2,  # Number of burn in samples\n",
+    "    sigma=sigma,  # Noise standard deviation of degraded image\n",
     ")"
    ]
   },
@@ -108,10 +108,10 @@
    "outputs": [],
    "source": [
     "# Lambda functions to evaluate cost function\n",
-    "LogLikeliL = lambda sol : - np.linalg.norm(image-phi.dir_op(sol))**2/(2*sigma**2)\n",
+    "LogLikeliL = lambda sol: -np.linalg.norm(image - phi.dir_op(sol)) ** 2 / (2 * sigma**2)\n",
     "\n",
     "# Lambda function for L2-norm identity prior backprojection steps\n",
-    "proxH = lambda x, T : x - 2*T*psi.adj_op(psi.dir_op(x))*2*delta\n",
+    "proxH = lambda x, T: x - 2 * T * psi.adj_op(psi.dir_op(x)) * 2 * delta\n",
     "\n",
     "# Lambda function for L2-ball likelihood projection during resampling\n",
     "proxB = lambda x, tau: optimisations.l2_ball_proj.sopt_fast_proj_B2(x, tau, params)"
@@ -155,8 +155,10 @@
     "X0 = np.abs(phi.adj_op(image))\n",
     "\n",
     "# Perform proximal nested sampling\n",
-    "NS_BayEvi, NS_Trace = sampling.proximal_nested.ProxNestedSampling(X0, LogLikeliL, proxH, proxB, params, options)\n",
-    "rescaled_evidence_estimate = NS_BayEvi[0] + np.log(np.pi/delta)*(dimension/2)"
+    "NS_BayEvi, NS_Trace = sampling.proximal_nested.ProxNestedSampling(\n",
+    "    X0, LogLikeliL, proxH, proxB, params, options\n",
+    ")\n",
+    "rescaled_evidence_estimate = NS_BayEvi[0] + np.log(np.pi / delta) * (dimension / 2)"
    ]
   },
   {
@@ -172,9 +174,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "detPar = 1/(2*delta+1/sigma**2)\n",
-    "ySquare= np.linalg.norm(image,'fro')**2\n",
-    "BayEvi_Val_gt_log = np.log(np.sqrt(((2*np.pi)**dimension)*(detPar**dimension))) + (-ySquare/(2*sigma**2)) + (detPar/2)*(ySquare/sigma**4)"
+    "detPar = 1 / (2 * delta + 1 / sigma**2)\n",
+    "ySquare = np.linalg.norm(image, \"fro\") ** 2\n",
+    "BayEvi_Val_gt_log = (\n",
+    "    np.log(np.sqrt(((2 * np.pi) ** dimension) * (detPar**dimension)))\n",
+    "    + (-ySquare / (2 * sigma**2))\n",
+    "    + (detPar / 2) * (ySquare / sigma**4)\n",
+    ")"
    ]
   },
   {
